added camel case convert feature

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-9">
-        <b>Camel case</b>
-        <textarea class="form-control" id="dataCamelCase" name="dataCamelCase" rows="10" cols="50">
+        <b>Your Code</b>
+        <textarea class="form-control" id="data" name="data" rows="10" cols="50">
 public class testData
 {
    public string name { get; set; }
@@ -31,12 +31,13 @@ public class testData2
 }</textarea>
         <p></p>
         <input type="button" value="Convert Pascal Case" class="btn btn-primary" name="convertPascalCase" />
+        <input type="button" value="Convert Camel Case" class="btn btn-primary" name="convertCamelCase" />
     </div>
     <p></p>
     <div class="col-md-9">
     <br>
-        <b>Pascal case</b>
-        <textarea class="form-control" id="dataPascalCase" name="dataPascalCase" rows="10" cols="50"></textarea>
+        <b>Output</b>
+        <textarea class="form-control" id="output" name="output" rows="10" cols="50"></textarea>
     </div>
   </div>
 </div>
